#166617 - Bug - Default - Error when typing many characters in Communication field

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -1990,7 +1990,7 @@
                                             @Translation.Get(GlobalEnums.TranslationCaseFields.tblLog_Text_External.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
                                         </td>
                                         <td>
-                                            @Html.TextAreaFor(model => model.CaseSolution.Text_External, new { style = "height:100px;", maxlength = "3000", @class = "acceptRules", standardId = GlobalEnums.TranslationCaseFields.tblLog_Text_External.ToString() })
+                                            @Html.TextAreaFor(model => model.CaseSolution.Text_External, new { style = "height:100px;", @class = "acceptRules", standardId = GlobalEnums.TranslationCaseFields.tblLog_Text_External.ToString() })
                                         </td>
                                         <td>
                                             <table>
@@ -2032,7 +2032,7 @@
                                             @Translation.Get(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
                                         </td>
                                         <td>
-                                            @Html.TextAreaFor(model => model.CaseSolution.Text_Internal, new { style = "height:100px;", maxlength = "3000", @class = "acceptRules", standardId = GlobalEnums.TranslationCaseFields.tblLog_Text_Internal.ToString() })
+                                            @Html.TextAreaFor(model => model.CaseSolution.Text_Internal, new { style = "height:100px;", @class = "acceptRules", standardId = GlobalEnums.TranslationCaseFields.tblLog_Text_Internal.ToString() })
                                         </td>
                                         <td>
                                             <table>
@@ -2470,36 +2470,36 @@
         checkVisibility();
     });
     
-    $('#CaseSolution_Text_External').on('onchange', function () {
-        checkLength(this);
-    });
+    //$('#CaseSolution_Text_External').on('onchange', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseSolution_Text_External').on('onkeyup', function () {
-        checkLength(this);
-    });
+    //$('#CaseSolution_Text_External').on('onkeyup', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseSolution_Text_External').on('onpaste', function () {
-        checkLength(this);
-    });
+    //$('#CaseSolution_Text_External').on('onpaste', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseSolution_Text_Internal').on('onchange', function () {
-        checkLength(this);
-    });
+    //$('#CaseSolution_Text_Internal').on('onchange', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseSolution_Text_Internal').on('onkeyup', function () {
-        checkLength(this);
-    });
+    //$('#CaseSolution_Text_Internal').on('onkeyup', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseSolution_Text_Internal').on('onpaste', function () {
-        checkLength(this);
-    });
+    //$('#CaseSolution_Text_Internal').on('onpaste', function () {
+    //    checkLength(this);
+    //});
 
-    var maxLength = 3000;
-    function checkLength(el) {
-        if (el.value.length > maxLength) {
-            el.value = el.value.substring(0, maxLength);
-        }
-    }
+    //var maxLength = 3000;
+    //function checkLength(el) {
+    //    if (el.value.length > maxLength) {
+    //        el.value = el.value.substring(0, maxLength);
+    //    }
+    //}
 
     $(function () {
 
