--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -119,7 +119,7 @@
                     <td>
                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote) && !readonlyMode)
                         {
-                            @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { style = "height:105px;", maxlength = "3000", @class = "log-field" })
+                            @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { style = "height:105px;", @class = "log-field" })
                         }
                         else
                         {
@@ -170,7 +170,7 @@
                         <td>
                             @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                             {
-                                @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { style = "height:105px;", maxlength = "3000", @class = "log-field" })
+                                @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { style = "height:105px;", @class = "log-field" })
                             }
                             else
                             {
@@ -530,29 +530,29 @@
 }
 
 <script>
-    $('#CaseLog_TextExternal').on('onchange', function () {
-        checkLength(this);
-    });
+    //$('#CaseLog_TextExternal').on('onchange', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseLog_TextExternal').on('onkeyup', function () {
-        checkLength(this);
-    });
+    //$('#CaseLog_TextExternal').on('onkeyup', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseLog_TextExternal').on('onpaste', function () {
-        checkLength(this);
-    });
+    //$('#CaseLog_TextExternal').on('onpaste', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseLog_TextInternal').on('onchange', function () {
-        checkLength(this);
-    });
+    //$('#CaseLog_TextInternal').on('onchange', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseLog_TextInternal').on('onkeyup', function () {
-        checkLength(this);
-    });
+    //$('#CaseLog_TextInternal').on('onkeyup', function () {
+    //    checkLength(this);
+    //});
 
-    $('#CaseLog_TextInternal').on('onpaste', function () {
-        checkLength(this);
-    });
+    //$('#CaseLog_TextInternal').on('onpaste', function () {
+    //    checkLength(this);
+    //});
 
     $(document)
         .on('change'
