--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
@@ -55,7 +55,7 @@
                 {
                     @Html.Hidden("returnUrl", Request.QueryString["returnUrl"])
                     <div class="text-center">
-                        <input type="image" value="Login with Microsoft" name="btnLogin" id="btnLogin" src="~/Content/img/ms-symbollockup_signin_light.png" />
+                        <input type="image" value="Login with Microsoft" name="btnLogin" id="btnLogin" src="~/Content/img/ms-symbollockup_signin_light.svg" />
                     </div>
                     @*<input type="submit" value="Login with Microsoft" name="btnLogin" id="btnLogin" class="btn btn-large btn-success" style="width:100%;" />*@
                 }
