--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
@@ -54,6 +54,7 @@
                 using (Html.BeginForm("SignIn", "Login", null, FormMethod.Post, new { id = "frmLoginMS", name = "frmLoginMS" }))
                 {
                     @Html.Hidden("returnUrl", Request.QueryString["returnUrl"])
+                    // Changed image 
                     <div class="text-center">
                         <input type="image" value="Login with Microsoft" name="btnLogin" id="btnLogin" src="~/Content/img/ms-symbollockup_signin_light.svg" />
                     </div>
