#166344 - Task - Inventory - New field for WarrantyEndDate in Inventory - Workstation

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/ComputerFieldsSettingsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/ComputerFieldsSettingsViewModel.cshtml
@@ -196,6 +196,9 @@
             @Html.EditorFor(m => m.ContractFieldsSettingsModel.AccountingDimension5FieldSettingModel, "Settings/FieldSettingForComputerModel")
         </tr>
         <tr>
+            @Html.EditorFor(m => m.ContractFieldsSettingsModel.WarrantyEndDateSettingModel, "Settings/FieldSettingForComputerModel")
+        </tr>
+        <tr>
             <td colspan="7" class="header">@Translation.GetCoreTextTranslation("Övrigt")</td>
         </tr>
         <tr>
