--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ContractFieldsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ContractFieldsViewModel.cshtml
@@ -20,6 +20,7 @@
                 @Html.EditorFor(m => m.ContractFieldsModel.AccountingDimension3, "Fields/Text")
                 @Html.EditorFor(m => m.ContractFieldsModel.AccountingDimension4, "Fields/Text")
                 @Html.EditorFor(m => m.ContractFieldsModel.AccountingDimension5, "Fields/Text")
+                @Html.EditorFor(m => m.ContractFieldsModel.WarrantyEndDate, "Fields/Date", new { id = "warrantyenddate_datepicker" })
             </table>
         </div>
     </div>
